1.2.3 - xxxxxxxxxxxxxxxxxx
==========================
* Issue 173: Previously, all background operations (i.e. when the inBackground() method is used)
were put into a queue and processed in an internal thread. Curator does this to handle retries in
background operations. This can be improved, however. The first time the background operation is
executed the ZooKeeper method can be called directly - without queuing. This will get the operation
into ZooKeeper immediately and will help prevent Curator's internal queue from backing up (which is
what I believe is happening in this issue).

1.2.2 - September 30, 2012
==========================
* NOTE: The 1.0.x branch is not being released and has been deprecated. It was advised many versions
ago that this was coming. So, here it is.

* For ZKClient Bridge: 1. Previous method of sending initial connect event to ZKClient was
unreliable; 2. Added an option to not close the curator instance

* The default connection timeout has increased to 15 seconds. The default session timeout has
increased to 60 seconds. These both can now be overridden via system properties:
"curator-default-connection-timeout" and "curator-default-session-timeout".

* Thanks to Ben Bangert: the InterProcessSemaphore waiting semantics weren't ideal. The nth
waiting node has to wait for all nodes in front of it. I've improved this a bit. However, the algorithm
used still suffers from potential out of order acquisition as well as potential starvation if a given client
does not release a lease. Therefore, I'm deprecating InterProcessSemaphore in favor of the new
InterProcessSemaphoreV2 which is based on Ben's algorithm.

* Issue 164: The PathChildrenCache no longer clears its internal state when there is a connection
issue. Consequently, the PathChildrenCacheEvent.Type values have changed. Instead of a RESET event
there are events that match the ConnectionState events.

1.1.18/1.0.20 - September 4, 2012
=================================